--- a/Week2-HW/deploy/css/styles.css
+++ b/Week2-HW/deploy/css/styles.css
@@ -360,3 +360,13 @@ textarea {
 /* =============
     Footer
 ============= */
+/* =============
+    Hero
+============= */
+/* ---------- Hero 2 ---------- */
+/* =============
+    Mini Heros
+============= */
+/* =============
+    Line Up
+============= */
