--- a/Week2-HW/dev/scss/styles.scss
+++ b/Week2-HW/dev/scss/styles.scss
@@ -19,3 +19,6 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_hero";
+@import "sections/_miniheros";
+@import "sections/lineup";
