css header spacing complete

--- a/Week2-HW/deploy/css/styles.css
+++ b/Week2-HW/deploy/css/styles.css
@@ -362,7 +362,13 @@ textarea {
     Header
 ============= */
 header {
-  background-color: navy;
+  background-color: rgb(41, 50, 65);
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". header .";
+}
+header > div {
+  grid-area: header;
 }
 
 /* =============
