--- a/Week2-HW/dev/scss/layout/_footer.scss
+++ b/Week2-HW/dev/scss/layout/_footer.scss
@@ -1,3 +1,13 @@
 /* =============
     Footer
 ============= */
+#footer{
+    background-color:  rgba(41, 50, 65, 1);
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". footer .";
+
+    >div{
+        grid-area: footer;
+    }
+}
