css grid hero and mini hero complete (?)

--- a/Week2-HW/dev/scss/base/_base.scss
+++ b/Week2-HW/dev/scss/base/_base.scss
@@ -1,6 +1,19 @@
 /* =============
     Base
 ============= */
+.header-footer{
+    background-color:  rgba(41, 50, 65, 1);
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". header-footer .";
+
+    >div{
+        grid-area: header-footer;
+    }
+}
+#mini-image{
+    width: 100%;
+}
 
 .large-images{
     width: 100%;
