--- a/Week2-HW/deploy/css/styles.css
+++ b/Week2-HW/deploy/css/styles.css
@@ -327,6 +327,20 @@ template {
 /* =============
     Base
 ============= */
+.header-footer {
+  background-color: rgb(41, 50, 65);
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". header-footer .";
+}
+.header-footer > div {
+  grid-area: header-footer;
+}
+
+#mini-image {
+  width: 100%;
+}
+
 .large-images {
   width: 100%;
 }
@@ -361,36 +375,34 @@ textarea {
 /* =============
     Header
 ============= */
-header {
-  background-color: rgb(41, 50, 65);
-  display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". header .";
-}
-header > div {
-  grid-area: header;
-}
-
 /* =============
     Footer
 ============= */
-#footer {
-  background-color: rgb(41, 50, 65);
-  display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". footer .";
-}
-#footer > div {
-  grid-area: footer;
-}
-
 /* =============
     Hero
 ============= */
+#hero-text {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". hero-text ." ". hero-text .";
+}
+#hero-text > aside {
+  grid-area: hero-text;
+}
+
 /* ---------- Hero 2 ---------- */
 /* =============
     Mini Heros
 ============= */
+.minihero-text {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". minihero-text .";
+}
+.minihero-text > div {
+  grid-area: minihero-text;
+}
+
 /* =============
     Line Up
 ============= */
