--- a/Week2-HW/dev/scss/sections/_hero.scss
+++ b/Week2-HW/dev/scss/sections/_hero.scss
@@ -1,17 +1,18 @@
 /* =============
     Hero
 ============= */
-#hero{
+#hero-text{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas:
+     ". hero-text ."". hero-text .";
 
+    >aside{
+        grid-area: hero-text;
+    }
 }
-
-
-
-
-
-
 
 /* ---------- Hero 2 ---------- */
 #hero2{
-    
+
 }
