--- a/Week2-HW/dev/scss/sections/_miniheros.scss
+++ b/Week2-HW/dev/scss/sections/_miniheros.scss
@@ -2,12 +2,12 @@
     Mini Heros
 ============= */
 
-.minihero-text{
+#minihero-text{
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". minihero-text .";
 
-    >div{
+   .minihero-text{
         grid-area: minihero-text;
     }
 }
