--- a/Week2-HW/dev/scss/sections/_lineup.scss
+++ b/Week2-HW/dev/scss/sections/_lineup.scss
@@ -4,10 +4,9 @@
 #lineup-text{
     display: grid;
     grid-template-columns: 16px auto 16px;
-    grid-template-areas:
-     ". hero-text ."". lineup-text .";
+    grid-template-areas:". lineup-text .";
 
-    >aside{
+    .lineup-text{
         grid-area: lineup-text;
     }
 }
