--- a/Week2-HW/dev/scss/sections/_hero.scss
+++ b/Week2-HW/dev/scss/sections/_hero.scss
@@ -1,15 +1,15 @@
 /* =============
     Hero
 ============= */
-#hero-text{
+#hero{
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas:
-     ". hero-text ."". hero-text .";
+     ". hero .";
+}
 
-    >aside{
-        grid-area: hero-text;
-    }
+#hero > div{
+    grid-area: hero;
 }
 
 /* ---------- Hero 2 ---------- */
