--- a/Week2-HW/dev/scss/sections/_lineup.scss
+++ b/Week2-HW/dev/scss/sections/_lineup.scss
@@ -1,12 +1,12 @@
 /* =============
     Line Up
 ============= */
-#lineup-text{
+#lineup{
     display: grid;
     grid-template-columns: 16px auto 16px;
-    grid-template-areas:". lineup-text .";
+    grid-template-areas:". lineup .";
+}
 
-    .lineup-text{
-        grid-area: lineup-text;
-    }
+#lineup > div{
+    grid-area: lineup;
 }
