--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -6,6 +6,8 @@
     grid-template-columns: 16px auto 16px;
     grid-template-areas:
      ". hero .";
+
+     border: 1px solid red;
 }
 
 #hero > div{
