--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -1,15 +1,10 @@
 /* =============
     Base
 ============= */
-#header-footer{
-    background-color:  rgba(41, 50, 65, 1);
-    display: grid;
-    grid-template-columns: 16px auto 16px;
-    grid-template-areas: ". header-footer .";
-
-    >div{
-        grid-area: header-footer;
-    }
+ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .large-images{
