--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -1,3 +1,15 @@
 /* =============
     Footer
 ============= */
+footer{
+    #footer{
+        background-color:  rgba(41, 50, 65, 1);
+        display: grid;
+        grid-template-columns: 16px auto 16px;
+        grid-template-areas: ". footer .";
+       
+        >div{
+            grid-area: footer;
+        }
+    }
+}
