color update for _lineup CSS GRID

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -439,5 +439,6 @@ footer #footer > div {
   grid-template-areas: ". lineup-content .";
 }
 #lineup ul li section > div {
+  background: rgb(169, 195, 233);
   grid-area: lineup-content;
 }
