--- a/dev/scss/sections/_lineup.scss
+++ b/dev/scss/sections/_lineup.scss
@@ -3,7 +3,22 @@
 ============= */
 #lineup{
     ul{
+        display: grid;
+        gap: 16px;
+
+        @include md{
+            grid-template-columns: repeat(2,1fr);
+          
+        }
+
         li{
+            border: 1px solid red;
+
+            padding-top: 16px;
+            padding-bottom: 16px;
+            
+        }
+
             img{
                 width: 100%;
             }
@@ -11,6 +26,7 @@
                     display: grid;
                     grid-template-columns: 16px auto 16px;
                     grid-template-areas:". lineup-content .";
+                    
 
                     >div{
                         background:rgba(169, 195, 233, 1);
@@ -20,5 +36,4 @@
 
         }            
     }
-}
    
