--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -3,24 +3,28 @@
 ============= */
 #hero{
     padding-bottom: 12px;
-
-    @include md{
-        grid-template-columns: repeat(2,1fr);
   
-    
+   #hero-sub{
+    @include md{
+        display: grid;
+        grid-template-columns: 50% auto;
+    }
+
+
     aside{
         display: grid;
         grid-template-columns: 16px auto 16px;
         grid-template-areas: ". hero .";
         background-color: rgba(226, 109, 115, 1);
         
-      
 
-        >div{
-            grid-area: hero;
-
-            
-            }
+    >div{
+        grid-area: hero;
         }
     }
+    }
+
 }
+
+
+   
