--- a/dev/scss/sections/_miniheros.scss
+++ b/dev/scss/sections/_miniheros.scss
@@ -3,16 +3,25 @@
 ============= */
 
 #miniheros{
-    .minihero-content{
-        display: grid;
-        grid-template-columns: 16px auto 16px;
-        grid-template-areas: ". minihero .";
-    
-        >div{
-            background: rgba(49, 89, 146, 1);
-            grid-area: minihero; 
+       #minihero-content{
+        @include md{
             display: grid;
             grid-template-columns: 50% auto;
-         }
+        }
+    
+    
+        aside{
+            display: grid;
+            grid-template-columns: 16px auto 16px;
+            grid-template-areas: ". hero .";
+            background-color:  rgba(49, 89, 146, 1);;
+            
+    
+        >div{
+            grid-area: minihero-content;
+            }
+        }
+        }
+    
     }
-}
+  
