--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -2,20 +2,34 @@
     Hero
 ============= */
 #hero{
-    padding-bottom: 12px;
-  
-   #hero-sub{
-    @include md{
-        display: grid;
-        grid-template-columns: 50% auto;
+    section{
+        @include md{
+            display: grid;
+            grid-template-columns: 40% auto;
+        }
+        @include lg{
+            display: grid;
+            grid-template-columns: 50% auto;
+        }
+        aside{
+            display: grid;
+            grid-template-columns: 16px auto 16px;
+            grid-template-areas: ". hero-aside .";
+            >div{
+                grid-area: hero-aside;
+            }
+        }
+
+        #hero-left{
+        background-color: ;
+
+        }
+        #hero-right{
+            background-color: 
+
     }
 
-
-    aside{
-        display: grid;
-        grid-template-columns: 16px auto 16px;
-        grid-template-areas: ". hero .";
-        background-color: rgba(226, 109, 115, 1);
+   
         
 
     >div{
@@ -24,6 +38,3 @@
     }
     }
 }
-
-
-   
