--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -13,3 +13,10 @@ ul{
 .large-images{
     width: 100%;
 }
+
+.show-large {
+    display: none;
+    @include lg{
+        display: block;
+    }
+}
