--- a/dev/scss/sections/_miniheros.scss
+++ b/dev/scss/sections/_miniheros.scss
@@ -3,25 +3,42 @@
 ============= */
 
 #miniheros{
-       #minihero-content{
-        @include md{
+    @include md{
+        display: grid;
+        grid-template-columns: 16px auto 16px;
+        grid-template-areas: ". minihero .";
+    }
+    
+    @include xxl{
+        grid-template-columns: auto 1200px auto;
+    }
+
+    >div{
+        @include md {
+            grid-area: minihero;
+            
             display: grid;
             grid-template-columns: 50% auto;
         }
-    
-    
-        aside{
-            display: grid;
-            grid-template-columns: 16px auto 16px;
-            grid-template-areas: ". hero .";
-            background-color:  rgba(49, 89, 146, 1);;
-            
-    
-        >div{
-            grid-area: minihero-content;
+        
+        .minihero-content{
+
+            >div{
+                grid-area: minihero-content;
+                display: grid;
+                grid-template-columns: 50% auto;
             }
-        }
-        }
     
+            #minihero-left{
+                background-color:  rgba(49, 89, 146, 1)
+            }
+            #minihero-right{
+                background-color:  rgba(49, 89, 146, 1)
+            }
+        }  
     }
+}
+        
+    
+    
   
