--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -21,4 +21,5 @@
 // Sections Styles
 @import "sections/_hero";
 @import "sections/_miniheros";
+@import "sections/_gallery";
 @import "sections/lineup";
