--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -2,12 +2,50 @@
     Footer
 ============= */
 footer{
-        background-color:  rgba(41, 50, 65, 1);
-        display: grid;
-        grid-template-columns: 16px auto 16px;
-        grid-template-areas: ". footer .";
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". footer .";
+
+    background-color:  rgba(41, 50, 65, 1);
+    color: rgba(253, 217, 219, 1);
        
-        >div{
-            grid-area: footer;
+    @include xxl{
+        grid-template-columns: auto 1200px auto;
+    }
+
+    >div{
+        grid-area: footer;
+        
+        @include md{
+            display: grid;
+            grid-template-columns: 50% auto;
+            grid-template-areas: 
+            "f1 f2"
+            "f1 f3";
+        }
+
+        @include lg{
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-areas: 
+            "f1 f2 f3";
+        }
+
+        #f1{
+            @include md{
+                grid-area: f1;
+            }
+        }
+
+        #f2{
+            @include md{
+                grid-area: f2;
+            }
+        }
+
+        #f3{
+            @include md{
+                grid-area: f3;
+            }
         }
     }
+}
